--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "husky": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.4",
     "react": "^18.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "sass": "^1.75.0"
   },
